added recursive submodules to action

--- a/.github/workflows/generate_bdic.yml
+++ b/.github/workflows/generate_bdic.yml
@@ -6,6 +6,8 @@ jobs:
     steps:
       - name: Checkout repository
         uses: actions/checkout@v2
+        with:
+          submodules: recursive
       - name: Run convert_dict
         run: cd $GITHUB_WORKSPACE && bdic_convert/convert_dict output/dictionaries/Medzuslovjansky_KomboLatinicaKirilica && echo "Successfully generated .bdic file."
       - name: Move to destination
