fixed moving dictionaries instead of copying

--- a/.github/workflows/generate_web_addons.yml
+++ b/.github/workflows/generate_web_addons.yml
@@ -14,11 +14,13 @@ jobs:
         run: cd $GITHUB_WORKSPACE && mv -f output/dictionaries/Medzuslovjansky_KomboLatinicaKirilica.bdic platforms/chrome/src/ && echo ".bdic file moved successfully."
       - name: Move firefox files to destination
         run: |
-          cd $GITHUB_WORKSPACE && mv -f output/dictionaries/Medzuslovjansky_KomboLatinicaKirilica.aff platforms/firefox/src/dictionaries/ && echo "Firefox .aff file moved."
-          cd $GITHUB_WORKSPACE && mv -f output/dictionaries/Medzuslovjansky_KomboLatinicaKirilica.dic platforms/firefox/src/dictionaries/ && echo "Firefox .dic file moved."
+          cd $GITHUB_WORKSPACE && cp -rf output/dictionaries/Medzuslovjansky_KomboLatinicaKirilica.aff platforms/firefox/src/dictionaries/ && echo "Firefox .aff file moved."
+          cd $GITHUB_WORKSPACE && cp -rf output/dictionaries/Medzuslovjansky_KomboLatinicaKirilica.dic platforms/firefox/src/dictionaries/ && echo "Firefox .dic file moved."
       - name: Detect and push changes
         run: |
           git config --global user.name 'github-actions[bot]'
           git config --global user.email 'github-actions[bot]@users.noreply.github.com'
           git add platforms/chrome/src/Medzuslovjansky_KomboLatinicaKirilica.bdic
+          git add platforms/firefox/src/dictionaries/Medzuslovjansky_KomboLatinicaKirilica.aff
+          git add platforms/firefox/src/dictionaries/Medzuslovjansky_KomboLatinicaKirilica.dic
           git diff-index --quiet HEAD && echo "No changes." || ( git commit -am "[bot] Automatically generated .bdic file" && git push )
