--- a/.github/workflows/generate_web_addons.yml
+++ b/.github/workflows/generate_web_addons.yml
@@ -1,4 +1,4 @@
-name: Convert Dictionary to bdic
+name: Generate dictionary files for web addons
 on: [push]
 jobs:
   Run_generate_web_addons:
@@ -8,10 +8,16 @@ jobs:
         uses: actions/checkout@v2
         with:
           submodules: recursive
-      - name: Run convert_dict
-        run: cd $GITHUB_WORKSPACE && bdic_convert/convert_dict output/dictionaries/Medzuslovjansky_KomboLatinicaKirilica && echo "Successfully generated .bdic file."
-      - name: Move bdic to destination
-        run: cd $GITHUB_WORKSPACE && mv -f output/dictionaries/Medzuslovjansky_KomboLatinicaKirilica.bdic platforms/chrome/src/ && echo ".bdic file moved successfully."
+      - name: Setup Python
+        uses: actions/setup-python@v2
+        with:
+          python-version: '3.x'
+      - name: Generate new hunspell dictionaries
+        run: cd $GITHUB_WORKSPACE && ./generate.sh
+      - name: Run convert_dict and copy bdic file
+        run: |
+          cd $GITHUB_WORKSPACE && bdic_convert/convert_dict output/dictionaries/Medzuslovjansky_KomboLatinicaKirilica && echo "Successfully generated .bdic file."
+          cd $GITHUB_WORKSPACE && mv -f output/dictionaries/Medzuslovjansky_KomboLatinicaKirilica.bdic platforms/chrome/src/ && echo ".bdic file moved successfully."
       - name: Move firefox files to destination
         run: |
           cd $GITHUB_WORKSPACE && cp -rf output/dictionaries/Medzuslovjansky_KomboLatinicaKirilica.aff platforms/firefox/src/dictionaries/ && echo "Firefox .aff file moved."
@@ -23,4 +29,4 @@ jobs:
           git add platforms/chrome/src/Medzuslovjansky_KomboLatinicaKirilica.bdic
           git add platforms/firefox/src/dictionaries/Medzuslovjansky_KomboLatinicaKirilica.aff
           git add platforms/firefox/src/dictionaries/Medzuslovjansky_KomboLatinicaKirilica.dic
-          git diff-index --quiet HEAD && echo "No changes." || ( git commit -am "[bot] Automatically generated .bdic file" && git push )
+          git diff-index --quiet HEAD && echo "No changes." || ( git commit -am "[bot] Automatically generated dictionary files for addons." && git push )
