--- a/.github/workflows/generate_web_addons.yml
+++ b/.github/workflows/generate_web_addons.yml
@@ -28,7 +28,5 @@ jobs:
         run: |
           git config --global user.name 'github-actions[bot]'
           git config --global user.email 'github-actions[bot]@users.noreply.github.com'
-          git add platforms/chrome/src/Medzuslovjansky_KomboLatinicaKirilica.bdic
-          git add platforms/firefox/src/dictionaries/Medzuslovjansky_KomboLatinicaKirilica.aff
-          git add platforms/firefox/src/dictionaries/Medzuslovjansky_KomboLatinicaKirilica.dic
+          git add --all
           git diff-index --quiet HEAD && echo "No changes." || ( git commit -am "[bot] Automatically generated dictionary files for addons." && git push )
