build(npm): merge benchmark inside

--- a/packages/npm/package.json
+++ b/packages/npm/package.json
@@ -14,7 +14,9 @@
     "LICENSE"
   ],
   "scripts": {
-    "prepare": "bash scripts/prepare",
+    "prepare": "zx scripts/prepare.mjs",
+    "plot": "zx benchmark/plot.mjs -i benchmark/out/bench.dat -o benchmark/out/bench.png",
+    "benchmark": "zx benchmark/benchmark.mjs",
     "test": "jest"
   },
   "repository": {
@@ -28,6 +30,13 @@
     "myspell",
     "dictionary"
   ],
+  "exports": {
+    "./index": "./index.js",
+    "./combined": "./combined.js",
+    "./cyrillic": "./cyrillic.js",
+    "./etymological": "./etymological.js",
+    "./latin": "./latin.js"
+  },
   "author": "Yaroslav Serhieiev <noomorph@gmail.com>",
   "license": "MIT",
   "bugs": {
@@ -35,6 +44,15 @@
   },
   "homepage": "https://github.com/medzuslovjansky/isv_hunspell_dict#readme",
   "devDependencies": {
-    "jest": "^27.4.7"
+    "csv-parse": "^5.0.4",
+    "dictionary-cs": "^2.0.3",
+    "dictionary-fr": "^2.6.0",
+    "dictionary-pl": "^1.2.4",
+    "dictionary-ru": "^2.0.2",
+    "ervy": "^1.0.7",
+    "jest": "^27.4.7",
+    "nodehun": "^3.0.2",
+    "which": "^2.0.2",
+    "zx": "^4.3.0"
   }
 }
