build(npm): prepare benchmark for CI

--- a/packages/npm/package.json
+++ b/packages/npm/package.json
@@ -51,6 +51,7 @@
     "dictionary-ru": "^2.0.2",
     "ervy": "^1.0.7",
     "jest": "^27.4.7",
+    "lodash": "^4.17.21",
     "nodehun": "^3.0.2",
     "which": "^2.0.2",
     "zx": "^4.3.0"
