--- a/package.json
+++ b/package.json
@@ -22,7 +22,7 @@
     "lerna": "^4.0.0"
   },
   "scripts": {
-    "prepare": "husky install"
+    "prepare": "husky install && lerna bootstrap"
   },
   "config": {
     "commitizen": {
