--- a/packages/extensions/package.json
+++ b/packages/extensions/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "devDependencies": {
     "@interslavic/isv_hunspell_dict": "^1.0.0",
+    "@interslavic/spelling-bdict": "^1.0.0",
     "ejs": "^3.1.6",
     "lodash": "^4.17.21",
     "archiver": "^5.3.0",
