--- a/packages/extensions/package.json
+++ b/packages/extensions/package.json
@@ -5,9 +5,10 @@
   "devDependencies": {
     "@interslavic/isv_hunspell_dict": "^1.0.0",
     "@interslavic/spelling-bdict": "^1.0.0",
+    "archiver": "^5.3.0",
     "ejs": "^3.1.6",
     "lodash": "^4.17.21",
-    "archiver": "^5.3.0",
+    "web-ext": "^6.6.0",
     "zx": "^4.3.0"
   },
   "scripts": {
