ci(repo): fix apt install

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -30,7 +30,7 @@ jobs:
         uses: browser-actions/setup-chrome@latest
 
       - name: Install Pandoc
-        run: apt install -y pandoc
+        run: sudo apt install -y pandoc
 
       - name: Install LXML
         run: pip3 install lxml
