--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -4,6 +4,8 @@ on:
     branches: [ master ]
   pull_request:
     branches: [ master ]
+env:
+  BUILD_VERSION: 1.0.0-dev.${{ github.run_number }}
 jobs:
   Generate_dictionaries:
     runs-on: ubuntu-latest
