--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,4 +1,5 @@
 name: Build
+
 on:
   push:
     branches: [ master, next ]
@@ -11,47 +12,221 @@ on:
         required: true
 env:
   BUILD_VERSION: 0.0.${{ github.event.inputs.buildVersion || github.run_number }}
+
 jobs:
-  Generate_dictionaries:
+  hunspell_dictionaries:
     runs-on: ubuntu-latest
     steps:
       - name: Checkout repository
         uses: actions/checkout@v2
-        with:
-          submodules: recursive
-
-      - name: Set build version
-        run: scripts/set_build_version
-
-      - name: Setup Node
-        uses: actions/setup-node@v2
-        with:
-          node-version-file: '.nvmrc'
 
       - name: Setup Python
         uses: actions/setup-python@v2
         with:
           python-version: '3.x'
 
-      - name: Setup Chrome
-        uses: browser-actions/setup-chrome@latest
-
-      - name: Install Pandoc
-        run: sudo apt install -y pandoc
-
       - name: Install LXML
         run: pip3 install lxml
 
-      - name: Prepare the packages
-        uses: bahmutov/npm-install@v1
-        with:
-          useLockFile: false
+      - name: Build the dictionaries
+        working-directory: packages/hunspell
+        run: ./generate.sh
 
-      - name: Test the packages
-        run: npx --no-install lerna run test
+      - name: Upload the artifacts
+        uses: actions/upload-artifact@v2
+        with:
+          name: hunspell_dictionaries
+          path: packages/hunspell/output/dictionaries/
+
+  bdic_dictionaries:
+    runs-on: ubuntu-latest
+    steps:
+      - name: Checkout repository
+        uses: actions/checkout@v2
+
+      - name: Build the dictionaries
+        working-directory: packages/bdic
+        run: scripts/prepare.sh
+
+      - name: Upload the artifacts
+        uses: actions/upload-artifact@v2
+        with:
+          name: bdic_dictionaries
+          path: packages/bdic/output/
+
+  chrome_extension:
+    needs: hunspell_dictionaries
+    runs-on: ubuntu-latest
+    steps:
+      - name: Checkout repository
+        uses: actions/checkout@v2
+
+      - name: Setup Node
+        uses: actions/setup-node@v2
+        with:
+          node-version-file: '.nvmrc'
+
+      - name: Setup Chrome
+        uses: browser-actions/setup-chrome@latest
+
+      - name: Download Hunspell dictionaries
+        uses: actions/download-artifact@v2
+        with:
+          name: hunspell_dictionaries
+
+      - name: Download BDIC dictionaries
+        uses: actions/download-artifact@v2
+        with:
+          name: bdic_dictionaries
+
+      - name: Prepare the extension builder
+        run: npx lerna bootstrap --no-ci --include-dependents --include-dependencies --scope "@interslavic/hunspell-extensions-builder"
 
       - name: Build the packages
-        run: npx --no-install lerna run build
+        run: npm run build:chrome
+        working-directory: packages/extensions
+
+      - name: Upload the artifacts
+        uses: actions/upload-artifact@v2
+        with:
+          name: chrome_extension
+          path: packages/extensions/dist/
+
+  firefox_extension:
+    needs: hunspell_dictionaries
+    runs-on: ubuntu-latest
+    steps:
+      - name: Checkout repository
+        uses: actions/checkout@v2
+
+      - name: Setup Node
+        uses: actions/setup-node@v2
+        with:
+          node-version-file: '.nvmrc'
+
+      - name: Download Hunspell dictionaries
+        uses: actions/download-artifact@v2
+        with:
+          name: hunspell_dictionaries
+
+      - name: Download BDIC dictionaries
+        uses: actions/download-artifact@v2
+        with:
+          name: bdic_dictionaries
+
+      - name: Prepare the extension builder
+        run: npx lerna bootstrap --no-ci --include-dependents --include-dependencies --scope "@interslavic/hunspell-extensions-builder"
+
+      - name: Build the packages
+        run: npm run build:firefox
+        working-directory: packages/extensions
         env:
           MOZILLA_API_KEY: ${{ secrets.MOZILLA_API_KEY }}
           MOZILLA_API_SECRET: ${{ secrets.MOZILLA_API_SECRET }}
+
+      - name: Upload the artifacts
+        uses: actions/upload-artifact@v2
+        with:
+          name: firefox_extension
+          path: packages/extensions/dist/
+
+  libreoffice_extension:
+    needs: hunspell_dictionaries
+    runs-on: ubuntu-latest
+    steps:
+      - name: Checkout repository
+        uses: actions/checkout@v2
+
+      - name: Setup Node
+        uses: actions/setup-node@v2
+        with:
+          node-version-file: '.nvmrc'
+
+      - name: Download Hunspell dictionaries
+        uses: actions/download-artifact@v2
+        with:
+          name: hunspell_dictionaries
+
+      - name: Download BDIC dictionaries
+        uses: actions/download-artifact@v2
+        with:
+          name: bdic_dictionaries
+
+      - name: Prepare the extension builder
+        run: npx lerna bootstrap --no-ci --include-dependents --include-dependencies --scope "@interslavic/hunspell-extensions-builder"
+
+      - name: Build the packages
+        run: npm run build:libreoffice
+        working-directory: packages/extensions
+
+      - name: Upload the artifacts
+        uses: actions/upload-artifact@v2
+        with:
+          name: libreoffice_extension
+          path: packages/extensions/dist/
+
+  npm_package:
+    needs: hunspell_dictionaries
+    runs-on: ubuntu-latest
+    steps:
+      - name: Checkout repository
+        uses: actions/checkout@v2
+
+      - name: Setup Node
+        uses: actions/setup-node@v2
+        with:
+          node-version-file: '.nvmrc'
+
+      - name: Download Hunspell dictionaries
+        uses: actions/download-artifact@v2
+        with:
+          name: hunspell_dictionaries
+
+      - name: Prepare the extension builder
+        run: npx lerna bootstrap --no-ci --include-dependents --include-dependencies --scope "@interslavic/hunspell-dictionary"
+
+      - name: Test the package
+        run: npm test
+        working-directory: packages/npm
+
+      - name: Pack the package
+        run: npm pack
+        working-directory: packages/npm
+
+      - name: Upload the artifacts
+        uses: actions/upload-artifact@v2
+        with:
+          name: npm_package
+          path: 'packages/npm/*.tgz'
+
+  publish:
+    needs:
+      - hunspell_dictionaries
+      - chrome_extension
+      - firefox_extension
+      - libreoffice_extension
+      - npm_package
+    runs-on: ubuntu-latest
+    steps:
+      - name: Download the dictionaries
+        uses: actions/download-artifact@v2
+        with:
+          name: hunspell_dictionaries
+      - name: Download Chrome extension
+        uses: actions/download-artifact@v2
+        with:
+          name: chrome_extension
+      - name: Download Firefox extension
+        uses: actions/download-artifact@v2
+        with:
+          name: firefox_extension
+      - name: Download Libreoffice extension
+        uses: actions/download-artifact@v2
+        with:
+          name: libreoffice
+      - name: Download NPM package
+        uses: actions/download-artifact@v2
+        with:
+          name: npm_package
+      - name: Publish a release
+        run: echo TODO
