--- a/packages/bdic/package.json
+++ b/packages/bdic/package.json
@@ -1,11 +1,11 @@
 {
-  "name": "@interslavic/spelling-bdict",
+  "name": "@interslavic/spelling-bdic",
   "version": "1.0.0",
   "private": true,
   "scripts": {
-    "prepare": "bash scripts/prepare.sh"
+    "prepare": "LAZY=1 bash scripts/prepare.sh"
   },
-  "devDependencies": {
+  "dependencies": {
     "@interslavic/isv_hunspell_dict": "^1.0.0"
   }
 }
