--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -12,8 +12,8 @@ on:
       - "!v*.*.*"
 
 env:
-  BUILD_VERSION: ${{ startsWith(github.ref, 'refs/tags/') ? github.ref_name : format('0.0.{0}', github.run_number) }}
-  IS_RELEASE: ${{ startsWith(github.ref, 'refs/tags/') ? '1' : '0' }}
+  BUILD_VERSION: ${{ startsWith(github.ref, 'refs/tags/') && github.ref_name || format('0.0.{0}', github.run_number) }}
+  IS_RELEASE: ${{ startsWith(github.ref, 'refs/tags/') && '1' || '0' }}
 
 jobs:
   prebuild:
