--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -191,6 +191,10 @@ jobs:
         run: 'npm version "$BUILD_VERSION" && npm pack'
         working-directory: packages/npm
 
+      - name: Rename TGZ file
+        run: npm run rename
+        working-directory: packages/npm
+
       - name: Upload the artifacts
         uses: actions/upload-artifact@v2
         with:
