--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -211,6 +211,11 @@ jobs:
       - npm_package
     runs-on: ubuntu-latest
     steps:
+      - name: Setup Node
+        uses: actions/setup-node@v2
+        with:
+          node-version-file: '.nvmrc'
+
       - name: Download the dictionaries
         uses: actions/download-artifact@v2
         with:
@@ -251,3 +256,6 @@ jobs:
           draft: true
           files: '.temp/*'
           generate_release_notes: true
+
+      - name: Publish to NPM
+        run: npm publish .temp/*-npm-*.tgz
