--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -50,6 +50,7 @@ jobs:
           path: packages/hunspell/output/dictionaries/
 
   chrome_extension:
+    if: ${{ false }}
     needs: hunspell_dictionaries
     runs-on: ubuntu-latest
     steps:
@@ -205,7 +206,6 @@ jobs:
     if: ${{ startsWith(github.ref, 'refs/tags/') }}
     needs:
       - hunspell_dictionaries
-      - chrome_extension
       - firefox_extension
       - libreoffice_extension
       - npm_package
@@ -223,6 +223,7 @@ jobs:
           path: .temp
 
       - name: Download Chrome extension
+        if: ${{ false }}
         uses: actions/download-artifact@v2
         with:
           name: chrome_extension
