ci(repo): unrevert

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -87,7 +87,6 @@ jobs:
           path: packages/chrome/dist/
 
   firefox_extension:
-    if: ${{ false }}
     needs: hunspell_dictionaries
     runs-on: ubuntu-latest
     steps:
@@ -130,7 +129,6 @@ jobs:
           path: packages/firefox/dist/
 
   libreoffice_extension:
-    if: ${{ false }}  
     needs: hunspell_dictionaries
     runs-on: ubuntu-latest
     steps:
@@ -205,8 +203,11 @@ jobs:
           path: 'packages/npm/*.tgz'
 
   publish:
+    if: ${{ startsWith(github.ref, 'refs/tags/') }}
     needs:
       - hunspell_dictionaries
+      - firefox_extension
+      - libreoffice_extension
       - npm_package
     runs-on: ubuntu-latest
     steps:
@@ -227,14 +228,12 @@ jobs:
           path: .temp
 
       - name: Download Firefox extension
-        if: ${{ false }}
         uses: actions/download-artifact@v2
         with:
           name: firefox_extension
           path: .temp
 
       - name: Download Libreoffice extension
-        if: ${{ false }}
         uses: actions/download-artifact@v2
         with:
           name: libreoffice_extension
@@ -249,6 +248,13 @@ jobs:
       - name: List the artifacts
         run: ls -R
         working-directory: .temp
+
+      - name: Publish a release
+        uses: softprops/action-gh-release@v1
+        with:
+          draft: true
+          files: '.temp/*'
+          generate_release_notes: true
 
       - name: Publish to NPM
         run: |
